--- a/hasura/metadata/databases/bxform/tables/public_form_audiences.yaml
+++ b/hasura/metadata/databases/bxform/tables/public_form_audiences.yaml
@@ -1,10 +1,10 @@
 table:
-  name: user_roles
+  name: form_audiences
   schema: public
 object_relationships:
+  - name: form
+    using:
+      foreign_key_constraint_on: form_id
   - name: role
     using:
       foreign_key_constraint_on: role_id
-  - name: user
-    using:
-      foreign_key_constraint_on: user_id
