--- a/hasura/metadata/databases/bxform/tables/tables.yaml
+++ b/hasura/metadata/databases/bxform/tables/tables.yaml
@@ -1,3 +1,11 @@
+- "!include public_answer_sheets.yaml"
+- "!include public_form_access.yaml"
+- "!include public_form_audiences.yaml"
+- "!include public_forms.yaml"
+- "!include public_option_types.yaml"
+- "!include public_question_answers.yaml"
+- "!include public_question_types.yaml"
+- "!include public_questions.yaml"
 - "!include public_roles.yaml"
 - "!include public_user_roles.yaml"
 - "!include public_users.yaml"
