--- a/hasura/metadata/databases/databases.yaml
+++ b/hasura/metadata/databases/databases.yaml
@@ -2,7 +2,8 @@
   kind: postgres
   configuration:
     connection_info:
-      database_url: postgresql://postgres:20010506@10.128.117.35:5432/bxform
+      database_url:
+        from_env: PG_DATABASE_URL
       isolation_level: read-committed
       use_prepared_statements: false
   tables: "!include bxform/tables/tables.yaml"
