--- a/client/.vscode/settings.json
+++ b/client/.vscode/settings.json
@@ -1,3 +1,13 @@
 {
-  "typescript.tsdk": "node_modules/typescript/lib"
+  "typescript.tsdk": "node_modules/typescript/lib",
+  "editor.formatOnSave": true,
+  "editor.codeActionsOnSave": {
+    "source.addMissingImports.ts": "always",
+    "source.fixAll.ts": "always",
+    "source.removeUnusedImports": "always",
+    "source.organizeImports": "always"
+  },
+  "editor.indentSize": "tabSize",
+  "editor.tabSize": 2,
+  "git.openRepositoryInParentFolders": "always"
 }
