--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,9 +6,9 @@ services:
     restart: always
     volumes:
       - ./postgres-data:/var/lib/postgresql/data
-    # ports:
-    #   # Expose the port for tooling (SQL language server in IDE, connecting with GUI's etc)
-    #   - ${DB_HOST_PORT}:${DB_PORT}
+    ports:
+      # Expose the port for tooling (SQL language server in IDE, connecting with GUI's etc)
+      - ${DB_HOST_PORT}:${DB_PORT}
     environment:
       POSTGRES_PASSWORD: ${DB_PASSWORD}
       POSTGRES_DB: ${DB_NAME}
