--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -47,7 +47,7 @@
     "downlevelIteration": true,
     "baseUrl": "src",
     "paths": {
-      "@assets/*": ["./src/assetsassets/*"]
+      "@assets/*": ["./src/assets/*"]
     }
   },
   "include": ["./src"]
